pro-finsweet-hirad

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "figmaproject",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "tailwind": "npx tailwindcss -i ./tailwind/tailwind.css -o ./css/blogTailwind.css --watch"
@@ -15,5 +14,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "description": ""
 }
